# SchoolCafeBot

./: LICENSE  main.py  pyproject.toml  test1.txt  test2.txt  test3.txt
